# ocamlSysProg

./: README.md  opamgen.sh
cmdline/: .merlin  annoymous_arg.ml  dune  md5sum.ml  two_args.ml
coreutils/: cp.ml  echo.ml  find.ml
projects/IO/: .merlin  rundemos.ml
projects/std_io/: dune
scripts/IO/: openfile.ml  openfile_std.ml  readfile.ml  write_to_stdout.ml
scripts/cmdline/: argv.ml
scripts/environ/: environ.ml
scripts/filesystem/: directories.ml  file_states.ml  paths.ml  rm_and_link.ml  std_file_desc.ml
scripts/modules/: list_module_contents.txt  where_to_find_cma.txt
scripts/terminal/: color.ml
scripts/unix_exceptions/: exc_handling.ml
std_io/: .merlin  rundemos.ml
time/: current_time.ml  dune
