(library
 (name md5sum)
 (libraries core base stdio)
 (inline_tests)
 (preprocess (pps ppx_jane))
 (modules Md5sum))

(executable
 (name annoymous_arg)
 (libraries core base stdio)
 (modules Annoymous_arg)
 (preprocess (pps ppx_jane)))

(executable
 (name two_args)
 (libraries core base stdio)
 (modules Two_args)
 (preprocess (pps ppx_jane)))